[package]
name = "rust_wrap"
version = "0.1.0"
edition = "2024"

[lib]
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to use this crate unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[features]
default = ["hot_reload"]
hot_reload = ["dep:hot-lib-reloader"]

[dependencies]
anyhow = "1.0.98"
numpy = "0.25.0"
lazy_static = "1.5.0"

[dependencies.pyo3]
version = "0.25.0"
features = ["abi3-py311", "anyhow", "extension-module"]

[dependencies.rust_hot]
path = "../rust_hot"

#hot-lib-reloader = { version = "0.7.0", optional = true }
[dependencies.hot-lib-reloader]
git = "https://github.com/Vollkornaffe/hot-lib-reloader-rs.git"
rev = "24f732c67ac8255b1d92986b10fd7da8f643507a"
optional = true
